Fix bug
Apparently the class hidden is reserved by CSS to force items to be invisible

--- a/styles.css
+++ b/styles.css
@@ -604,12 +604,12 @@ button.remove::after {
   pointer-events: none;
 }
 
-button.hidden {
+button.menu-eye {
   position: relative;
   z-index: 1;
 }
 
-button.hidden::before {
+button.menu-eye::before {
   content: "👁️";
   position: absolute;
   left: 50%;
